log

ju., 17 de ago. de 2023 10:11:06: 
 tests:  0|7
total_score: 0/70
ac13143
ju., 17 de ago. de 2023 10:13:14: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
58f63de
ju., 17 de ago. de 2023 16:04:42: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
110df3c
ju., 17 de ago. de 2023 16:14:44: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
ju., 17 de ago. de 2023 16:17:37: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
7b499f2
ju., 17 de ago. de 2023 16:19:44: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
5ebf5d8
ju., 17 de ago. de 2023 16:31:50: 
 exercises.c | 25 +++++++++++++++++++++----
 1 file changed, 21 insertions(+), 4 deletions(-)
In file included from test.c:1:0:
exercises.c: In function 'checkSorted':
exercises.c:82:5: error: expected ')' before '{' token
     {
     ^
exercises.c:85:3: error: expected expression before '}' token
   }
   ^
exercises.c:77:7: error: unused variable 'descendente' [-Werror=unused-variable]
   int descendente;
       ^~~~~~~~~~~
exercises.c:76:7: error: unused variable 'ascendente' [-Werror=unused-variable]
   int ascendente;
       ^~~~~~~~~~
exercises.c: In function 'filterEvenNumbers':
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
exercises.c: In function 'checkSorted':
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1fe7ac5
ju., 17 de ago. de 2023 16:35:27: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:1:0:
exercises.c: In function 'checkSorted':
exercises.c:82:5: error: expected ')' before '{' token
     {
     ^
exercises.c:85:3: error: expected expression before '}' token
   }
   ^
exercises.c: In function 'filterEvenNumbers':
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
de61420
ju., 17 de ago. de 2023 16:36:48: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
876e239
ju., 17 de ago. de 2023 16:38:30: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 20/70
950bcca
ju., 17 de ago. de 2023 16:41:18: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 20/70
8730667
